# downsampler

./: .cproject  CHANGELOG.rst  CMakeLists.txt  change_log  package.xml
cfg/: Downsampler.cfg  DownsamplerRamp.cfg
include/downsampler/: downsampler.h
launch/: downsampler.launch.xml  pc_manipulator.launch  standalone.launch
src/: downsampler.cpp  pc_manipulator.cpp
